--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 *{margin:0;padding:0;}
+* {
+    font-size: 12px;
+    font-family: Tahoma, Geneva, sans-serif, '宋体';
+}
+html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, input, textarea, p, blockquote, th, td {
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    font-family: Tahoma,Verdana,微软雅黑,新宋体;
+}
 body {
     background: #F2F2F3;
-    font-family: "Microsoft YaHei",Arial, Helvetica, Verdana, sans-serif;
-    font-size: 12px;
-
 }
 
 .clear {
@@ -49,7 +56,7 @@ a.searchbtn,a.se_english{text-decoration: none}
     cursor: pointer;
 }
 .nav li.len1 {
-    width: 100px;
+    width: 70px;
 }
 .nav .li1 {
     font-size: 14px;
@@ -96,15 +103,29 @@ table tr td a:hover{color: #000}
     line-height: 12px;
     padding: 6px 10px;
 }
+.nav_li_04{margin-right: 20px;}
+.nav_li_05{margin-left: 20px;}
+.nav_li_06{margin-left: 20px;}
+.nav_li_07{margin-left: 25px;}
 /*精选案例*/
-.jingxuan h4{margin-bottom: 10px;}
+.jingxuan h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .jing_xu{border-bottom: 2px dotted #848484;margin-bottom: 20px}
 ul.jing{list-style: none;text-align: center;}
 ul.jing li{float: left;width: 25%;height: 170px}
 /*ul.jing li:nth-child(n + 1){margin-right:0.8%;margin-left:0.8%;}*/
 
 /*海报欣赏*/
-.haibao h4{margin-bottom: 10px}
+.haibao h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .hai_xu{border-bottom: 2px dotted #848484;margin-bottom: 20px}
 ul.hai{list-style: none;text-align: center;}
 ul.hai li{float: left;width: 25%;height: 170px}
@@ -112,7 +133,13 @@ ul.hai li{float: left;width: 25%;height: 170px}
 .footer{clear:both;}
 /*联系我们*/
 .lianxi{bottom:0;}
-.lianxi h4{margin-bottom: 10px}
+.lianxi h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
 .lian_xu{border-bottom: 2px dotted #848484;margin-bottom: 20px}
 ul.lian{list-style: none;margin-bottom: 60px}
 ul.lian li{margin-bottom: 10px}
@@ -124,7 +151,12 @@ ul.ban{list-style: none}
 
 /*Member首页*/
 .chengyuan{clear: both;}
-.chengyuan h4{margin-bottom: 10px}
+.chengyuan h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .cheng_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 .cheng{
     list-style: none;
@@ -163,7 +195,12 @@ dd p.dd_p3{margin-bottom: }
     width: 215px;
 }
 /*News 动态*/
-.newsdongtai h4{margin-bottom: 10px;}
+.newsdongtai h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .newsdongtai_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 .news_div,.news_img{text-align: center;margin-bottom: 20px}
 .news_div{margin-bottom: 30px}
@@ -176,7 +213,12 @@ dd p.dd_p3{margin-bottom: }
 .news_li_01{margin-bottom: 10px}
 /*关于朴上*/
 .guanyu{clear: both;}
-.guanyu h4{margin-bottom: 10px}
+.guanyu h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .guanyu_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 
 /*关于页面*/
@@ -202,18 +244,33 @@ dd p.dd_p3{margin-bottom: }
 
 /*合作页面*/
 .Partnership{clear: both;}
-.Partnership h4{margin-bottom: 10px}
+.Partnership h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .Partnership_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 
 /*招聘页面*/
 .Recruitment{clear: both;}
-.Recruitment h4{margin-bottom: 10px}
+.Recruitment h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .Recruitment_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 
 /*奥诺斯特画册设计页面*/
 
 .huace{clear: both;margin-bottom: 90px;}
-.huace h4{margin-bottom: 10px}
+.huace h3{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
 .huace_xu{border-bottom: 2px dotted #848484;margin-bottom: 40px}
 
 /*东方博瑞品牌形象设计*/
@@ -253,13 +310,12 @@ ul.pinpang li{display: inline-block;width: 25%;line-height: 1.8}
     background: rgba(255, 220, 13, 0.57);
     display: none;
 }
-.txt-two h3{
+.txt-two p.txt-two_p1{
     position: relative;
     bottom: 24px;
-    /*font-weight: normal;*/
+    font-size: 14px
 }
-.txt-two p{
-    font-weight: bold;
+.txt-two p.txt-two_p2{
     position: relative;
     bottom: 30px;
     font-size: 14px;
@@ -275,7 +331,7 @@ ul.pinpang li{display: inline-block;width: 25%;line-height: 1.8}
     border-right: 4px solid transparent;
     border-top: 8px solid #7D7D7D;
     position: absolute;
-    top: 12px;
-    left: 48px;
+    top: 13px;
+    left: 40px;
 }
 
