--- a/css/style.css
+++ b/css/style.css
@@ -203,11 +203,12 @@ ul.ban{list-style: none}
 .cheng dd h3{color: #FFDC0D}
 dl.dl_01{margin-bottom: 150px}
 dd{display: block;}
-dd h4{color: #FFDC0D}  
+dd h4{color: #FFDC0D} 
+dd h4.dd_h5{color:#6D6D6D} 
 dd h3{margin-bottom: 10px}
 dd p{line-height: 1.8}
 dd p.dd_p1{margin-bottom: 10px}
-dd p.dd_p2{margin-bottom: 25px}
+dd p.dd_p2{margin-bottom: 105px}
 dd p.dd_p3{margin-bottom: }
 .dt_01{border-right: 1px solid #FFDC0D;line-height: 80px;}
 .dt_h{outline: 1px solid #FFDC0D;
