--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, inpu
     padding: 0;
     margin: 0;
     font-size: 16px;
-    font-family: Tahoma,Verdana,微软雅黑,新宋体;
+    /*font-family: Tahoma,Verdana,微软雅黑,新宋体;*/
+    font-family: hati;
 }
 body {
     background: #F2F2F3;
@@ -112,10 +113,16 @@ table tr td a:hover{color: #000}
 .nav_li_07{margin-left: 25px;}
 /*精选案例*/
 .jingxuan h3{
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;
     font-size: 14px;
     font-weight: bold;
-    padding-bottom: 5px;
+    padding-bottom: 5px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 0px;
+    color: #6a6a6a;
+
 }
 .jing_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 20px}
 ul.jing{
@@ -130,10 +137,15 @@ ul.jing li{float: left;width: 25%;height: 174px}
 
 /*海报欣赏*/
 .haibao h3{
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;
     font-size: 14px;
     font-weight: bold;
-    padding-bottom: 5px;
+    padding-bottom: 5px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .hai_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 20px}
 ul.hai{
@@ -154,10 +166,15 @@ ul.hai li{float: left;width: 25%;height: 174px}
 /*联系我们*/
 .lianxi{bottom:0;}
 .lianxi h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 
 .lian_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 20px}
@@ -174,10 +191,12 @@ ul.ban{list-style: none}
 .chengyuan{clear: both;}
 .chengyuan h2{
     margin-bottom: 6px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
+.chengyuan{}
 .cheng_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 .cheng{
     list-style: none;
@@ -200,15 +219,16 @@ ul.ban{list-style: none}
     width: 695px;
     float: left;
 }
-.cheng dd h3{color: #FFDC0D;font-size: 18px}
+
+.cheng dd h3{color: #f4c91f;font-size: 20px}
 dl.dl_01{margin-bottom: 150px}
 dd{display: block;}
-dd h4{color: #FFDC0D;} 
-dd h4.dd_h5{color:#6D6D6D} 
+dd h4{color: #f4c91f;margin-bottom: 5px} 
+dd h4.dd_h5{color:#6D6D6D;margin-bottom: 5px} 
 dd h3{margin-bottom: 10px}
 dd p{line-height: 1.8}
-dd p.dd_p1{margin-bottom: 10px}
-dd p.dd_p2{margin-bottom: 43px}
+dd p.dd_p1{margin-bottom: 5px}
+dd p.dd_p2{margin-bottom: 50px}
 dd p.dd_p3{margin-bottom: }
 .dt_01{border-right: 1px solid #FFDC0D;line-height: 80px;}
 .dt_h{outline: 1px solid #FFDC0D;
@@ -218,10 +238,15 @@ dd p.dd_p3{margin-bottom: }
 }
 /*News 动态*/
 .newsdongtai h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .newsdongtai_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 .news_div,.news_img{text-align: center;margin-bottom: 20px}
@@ -236,10 +261,15 @@ dd p.dd_p3{margin-bottom: }
 /*关于朴上*/
 .guanyu{clear: both;}
 .guanyu h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .guanyu_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 
@@ -267,20 +297,30 @@ dd p.dd_p3{margin-bottom: }
 /*合作页面*/
 .Partnership{clear: both;}
 .Partnership h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .Partnership_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 
 /*招聘页面*/
 .Recruitment{clear: both;}
 .Recruitment h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .Recruitment_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 
@@ -288,10 +328,15 @@ dd p.dd_p3{margin-bottom: }
 
 .huace{clear: both;margin-bottom: 50px;}
 .huace h3{
-    margin-bottom: 6px;
+    /*margin-bottom: 6px;
     font-size: 14px;
     font-weight: bold;
+    padding-bottom: 0px;*/
+    margin-bottom: 6px;
+    font-size: 16px;
+    font-weight: bold;
     padding-bottom: 0px;
+    color: #6a6a6a;
 }
 .huace_xu{border-bottom: 2px dotted #C5C5C5;margin-bottom: 40px}
 
@@ -323,14 +368,16 @@ ul.pinpang li{display: inline-block;width: 25%;line-height: 1.8}
 .txt-two{
     position: absolute;
     left: 0;
-    padding-top: 55px;
+    top:0;
+    padding-top: 54px;
     line-height: 75px;
     text-align: center;
     color: #000;
     background: rgba(255, 220, 13, 0.57);
     display: none;
     width: 240px;
-    margin-left: 1em;
+    margin-left: 0.8em;
+    z-index: 1;
     
 }
 .txt-two p.txt-two_p1{
